fixed management layout issue

--- a/themes/default/school/index.html
+++ b/themes/default/school/index.html
@@ -14,9 +14,10 @@
                 <div class="row schoolindex">
 
                     <div class="col-12">
-                        <div class="card-columns">
+                        <div class="row">
                             
                             <!-- START : CLASS MANAGER -->
+                            <div class="col-md-6">
                             <div class="card">
 
                                 <div class="card-header">
@@ -63,7 +64,9 @@
                                 </div>
                             </div>
                             <!-- END : CLASS MANAGER -->
+                            </div>
 
+                            <div class="col-md-6">
                             <!-- START : GRADE MANAGER -->
                             <div class="card">
                                 <div class="card-header">
@@ -99,7 +102,9 @@
                                 </div>
                             </div>
                             <!-- END : GRADE MANAGER -->
+                            </div>
 
+                            <div class="col-md-6">
                             <!-- START : RELIGION MANAGER -->
                             <div class="card">
                                 <div class="card-header">
@@ -135,7 +140,9 @@
                                 </div>
                             </div>
                             <!-- END : RELIGION MANAGER -->
+                            </div>
 
+                            <div class="col-md-6">
                             <!-- START : SUBJECT MANAGER -->
                             <div class="card">
                                 <div class="card-header">
@@ -173,7 +180,9 @@
                                 </div>
                             </div>
                             <!-- END : SUBJECT MANAGER -->
+                            </div>
 
+                            <div class="col-md-6">
                             <!-- START : RELATIONSHIP MANAGER -->
                             <div class="card">
                                 <div class="card-header">
@@ -209,7 +218,9 @@
                                 </div>
                             </div>
                             <!-- END : RELATIONSHIP MANAGER -->
+                            </div>
 
+                            <div class="col-md-6">
                             <!-- START : EXAM TYPE MANAGER -->
                             <div class="card">
                                 <div class="card-header">
@@ -245,7 +256,9 @@
                                 </div>
                             </div>
                             <!-- END : EXAM TYPE MANAGER -->
+                            </div>
 
+                            <div class="col-md-6">
                             <!-- START : SPORT MANAGER -->
                             <div class="card">
                                 <div class="card-header">
@@ -281,7 +294,9 @@
                                 </div>
                             </div>
                             <!-- END : SPORT MANAGER -->
+                            </div>
 
+                            <div class="col-md-6">
                             <!-- START : STAFF CATEGORY MANAGER -->
                             <div class="card">
                                 <div class="card-header">
@@ -317,7 +332,9 @@
                                 </div>
                             </div>
                             <!-- END : STAFF CATEGORY MANAGER -->
+                            </div>
 
+                            <div class="col-md-6">
                             <!-- START : STAFF TYPE MANAGER -->
                             <div class="card">
                                 <div class="card-header">
@@ -355,7 +372,9 @@
                                 </div>
                             </div>
                             <!-- END : STAFF TYPE MANAGER -->
+                            </div>
 
+                            <div class="col-md-6">
                             <!-- START : USER ROLE MANAGER -->
                             <div class="card">
                                 <div class="card-header">
@@ -393,6 +412,7 @@
                                 </div>
                             </div>
                             <!-- END : USER ROLE MANAGER -->
+                            </div>
                         </div>
                     </div>
 
