portal parent initialized

--- a/themes/default/parents/profile.html
+++ b/themes/default/parents/profile.html
@@ -187,7 +187,7 @@
 
                                                     <div class="col-md-6">
                                                         <div class="card">
-                                                            <div class="card-header">System</div>
+                                                            <div class="card-header">System Data</div>
                                                             <div class="card-body">
                                                                 
                                                                 <div class="form-row">
@@ -204,7 +204,7 @@
                                                                             <label for="">No of Students</label>
                                                                             <input type="text" class="form-control" value="{{ student.count }}" disabled>
                                                                         </div>
-                                                                    </div>                                                                    
+                                                                    </div>
 
                                                                 </div>
                                                             </div>
