--- a/themes/default/messages/single.html
+++ b/themes/default/messages/single.html
@@ -14,7 +14,7 @@
                 <div class="messagessingle">
 
 					<!-- START : SINGLE CONVERSATION -->
-					<a href="{{ app.url }}/messages"><button class="btn btn-xs btn-secondary"><i class="la la-comments"></i> Conversations</button></a>
+					<a href="{{ app.url }}/messages"><button class="btn btn-xs btn-secondary"><i class="la la-comments"></i> Back to Conversations</button></a>
                     <button class="btn btn-xs btn-primary" onclick="location.reload();"><i class="la la-refresh"></i> Refresh</button>
 
 					<div class="card mt-2">
