--- a/themes/default/portal/parent.html
+++ b/themes/default/portal/parent.html
@@ -9,7 +9,7 @@
                 {{ template.topmenu|raw }}
             </div>
 
-            <div class="col-md-8 mx-auto content">
+            <div class="col-md-8 mx-auto">
 
                 <div class="parent">
 
@@ -45,7 +45,7 @@
                                             </li>
                                         </ul>
 
-                                        <div class="tab-content pt-1" id="myTabContent">
+                                        <div class="tab-content p-3" id="myTabContent">
 
                                             <!-- START : STUDENT TAB -->
                                             <div class="tab-pane fade" id="student" role="tabpanel" aria-labelledby="student-tab">
