--- a/themes/default/portal/student.html
+++ b/themes/default/portal/student.html
@@ -9,7 +9,7 @@
                 {{ template.topmenu|raw }}
             </div>
 
-            <div class="col-md-8 mx-auto content">
+            <div class="col-md-8 mx-auto">
 
                 <div class="student">
 
@@ -31,7 +31,7 @@
                                     </div>
 
                                     <!-- CARD BODY -->
-                                    <div class="card-body px-0">
+                                    <div class="card-body p-3">
                                         
                                         <ul class="nav nav-pills" id="myTab" role="tablist">
                                             <li class="nav-item">
