--- a/themes/default/parents/profile.html
+++ b/themes/default/parents/profile.html
@@ -442,14 +442,14 @@
                                                                     <div class="col-2">
                                                                         <div class="form-group">
                                                                             <label for="password">Password</label>
-                                                                            <input type="text" class="form-control" id="parent-password" placeholder="{{ settings.password }}" disabled>
+                                                                            <input type="password" class="form-control" id="parent-password" placeholder="{{ settings.password }}" disabled>
                                                                         </div>
                                                                     </div>
 
                                                                     <div class="col-2">
                                                                         <div class="form-group">
                                                                             <label for="confirm_password">Confirm Password</label>
-                                                                            <input type="text" class="form-control" id="parent-confirm_password" placeholder="Retype if changed" disabled>
+                                                                            <input type="password" class="form-control" id="parent-confirm_password" placeholder="Retype if changed" disabled>
                                                                         </div>
                                                                     </div>
 
