--- a/themes/default/blocks/permission_denied.html
+++ b/themes/default/blocks/permission_denied.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="container-fluid" style="height: 100%vh;">
     <div class="col-6 card card-error mx-auto text-center bg-transparent">
         <div class="card-body">
 
