--- a/themes/default/blocks/permission_denied.html
+++ b/themes/default/blocks/permission_denied.html
@@ -1,13 +1,13 @@
-<div class="container-fluid" style="height: 100%vh;">
-    <div class="col-6 card card-error mx-auto text-center bg-transparent">
+<div class="container-fluid" style="height: 75vh;">
+    <div class="col-6 card mx-auto text-center bg-transparent">
         <div class="card-body">
 
-            <i class="la la-bug mb-4" style="font-size: 122px;"></i>
-            <h4 class="mb-3">Permission Denied</h4>
+            <i class="la la-lock mb-4" style="font-size: 122px;"></i>
+            <h2 class="mb-4">Permission Denied</h2>
             <p>
-                Seems like something went wrong in this specific section.
-                System already sent automatically generated report to the relevent
-                departments. But please report this behaviour to your account agent or our
+                Seems like you do not have required permissions in this specific section. </p>
+            <p>
+                If you are an eligible person to proceed to required action please report this behaviour to your system administrator or our system
                 support department to take quick actions.
             </p>
         </div>
