--- a/themes/default/health/search.html
+++ b/themes/default/health/search.html
@@ -12,6 +12,7 @@
                 {{ template.topmenu|raw }}
 
                 <div class="healthsearch">
+                {% if permission.health.search.view %}
 
                     <!-- START : HEALTH SEARCH -->
                     <h4 class="page-title"> Search Health Records </h4>
@@ -263,7 +264,9 @@
                         <!-- END : SEARCH RESULT TABLE -->
                     </section>
                     <!-- END : SEARCH RESULTS -->
-
+                {% else %}
+                    {% include "blocks/permission_denied.html" %}
+                {% endif %}
                 </div>
                 <!-- END : CONTENT -->
 
