--- a/themes/default/health/index.html
+++ b/themes/default/health/index.html
@@ -11,6 +11,7 @@
                 {{ template.topmenu|raw }}
 
                 <div class="healthindex">
+                {% if permission.health.index.view %}
 
                     <!-- START : SPORT SUMMARY  -->
                     <section class="attendaceview">
@@ -106,7 +107,9 @@
 
                     </section>
                     <!-- END : CLASS VIEW ATTENDANCE -->
-
+                {% else %}
+                    {% include "blocks/permission_denied.html" %}
+                {% endif %}
                 </div>
             </div>
         </div>
