--- a/themes/default/parents/index.html
+++ b/themes/default/parents/index.html
@@ -11,6 +11,7 @@
                 {{ template.topmenu|raw }}
 
                 <div class="parentindex">
+                {% if permission.parents.index.view %}
 
                     <!-- START : SPORT SUMMARY  -->
                     <section class="attendaceview">
@@ -106,6 +107,9 @@
                     </section>
                     <!-- END : CLASS VIEW ATTENDANCE -->
 
+                {% else %}
+                    {% include "blocks/permission_denied.html" %}
+                {% endif %}
                 </div>
             </div>
         </div>
