--- a/themes/default/report/staff.html
+++ b/themes/default/report/staff.html
@@ -11,6 +11,7 @@
                 {{ template.topmenu|raw }}
 
                 <section class="report-staff">
+                {% if permission.report.staff.view %}
 
                     <h4 class="page-title"> Staff Reports </h4>
 
@@ -129,6 +130,9 @@
                         </div>
                     </div>
 
+                {% else %}
+                    {% include "blocks/permission_denied.html" %}
+                {% endif %}
                 </section>
             </div>
         </div>
