--- a/themes/default/result/add.html
+++ b/themes/default/result/add.html
@@ -11,6 +11,7 @@
                 {{ template.topmenu|raw }}
 
                 <div class="resultadd">
+                {% if permission.result.add.view %}
 
                     <h4 class="page-title"> Add Exam Result </h4>
 
@@ -174,6 +175,9 @@
                     </section>
                     <!-- END : EXAM SCHEDULE SEARCH RESULT -->
 
+                {% else %}
+                    {% include "blocks/permission_denied.html" %}
+                {% endif %}
                 </div>
             </div>
         </div>
