--- a/themes/default/result/search.html
+++ b/themes/default/result/search.html
@@ -11,6 +11,7 @@
                 {{ template.topmenu|raw }}
 
                 <div class="resultsearch">
+                {% if permission.result.search.view %}
 
                     <h4 class="page-title"> Search Exam Result </h4>
 
@@ -179,6 +180,9 @@
                     </section>
                     <!-- END : EXAM SCHEDULE SEARCH RESULT -->
 
+                {% else %}
+                    {% include "blocks/permission_denied.html" %}
+                {% endif %}
                 </div>
             </div>
         </div>
