school management permission completed

--- a/themes/default/blocks/permission_denied.html
+++ b/themes/default/blocks/permission_denied.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="height: 75vh;">
+<div class="container-fluid permission_denied" style="height: 75vh;">
     <div class="col-6 card mx-auto text-center bg-transparent">
         <div class="card-body">
 
@@ -7,8 +7,7 @@
             <p>
                 Seems like you do not have required permissions in this specific section. </p>
             <p>
-                If you are an eligible person to proceed to required action please report this behaviour to your system administrator or our system
-                support department to take quick actions.
+                If you are an eligible person to proceed please report this behaviour to <br/> your system administrator or our system support department to take quick actions.
             </p>
         </div>
     </div>
