--- a/themes/default/school/index.html
+++ b/themes/default/school/index.html
@@ -12,6 +12,7 @@
                 {{ template.topmenu|raw }}
 
                 <div class="row schoolindex">
+                {% if permission.management.index.view %}
 
                     <div class="col-12">
                         <div class="row">
@@ -416,6 +417,9 @@
                         </div>
                     </div>
 
+                {% else %}
+                    {% include "blocks/permission_denied.html" %}
+                {% endif %}
                 </div>
 
             </div>
